--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/calcular.js">
+    <link rel="stylesheet" href="/script.js">
+    <link rel="stylesheet" href="/botão.html">
 </head>
 <body>
     <div class="container">
